# Meggelan

./: .gitignore  GeneralREADME.md  README.md  desktop.ini
Apex/: desktop.ini
Horizon/: .env.example  .gitignore  README.md  alembic.ini  desktop.ini  requirements.txt
Hydra/: desktop.ini
Mercury/: desktop.ini
Mercury/hrvAnalysis/: ArchitectureDocumentation.md  ArcitectureDocumentation_V2.md  FullDocumentation.md  README.md  hrv_platform.db  pyproject.toml
Mercury/hrvAnalysis/frontend/: index.html  package-lock.json  package.json  vite.config.ts
Mercury/hrvAnalysis/frontend/src/: App.tsx
Mercury/hrvAnalysis/src/hrv_platform/: _ms_flare_risk.py  anomalies.py  artemis_sync.py  cli copy.py  cli.py  models.py  plots.py  recalc.py  repository.py  scoring.py  services.py  trends.py
Mercury/hrvAnalysis/src/hrv_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Mercury/hrvAnalysis/src/hrv_platform/api/: anomalies.py  app.py  ms_flare_risk.py  summary.py  trends.py
Mercury/hrvAnalysis/src/hrv_platform/ms_flare_risk/: README.md  __init__.py  config.py  db.py  risk_components.py  service.py  test_risk_components.py
Mercury/hrvAnalysis/src/hrv_platform/sources/: __init__.py
Mercury/hrvAnalysis/src/hrv_platform/templates/: dashboard copy.html  dashboard.html
Mercury/hrvAnalysis/tests/: FlareRiskDetector.py  test_scoring.py  test_trends.py
Observer/: BloodAnalysis v1.0.pbip  BloodAnalysis_PowerBIMain.md  C# Script 1.csx  C# Script Anchor Markers.csx  C# Script Bands.csx  C# Script Updates.csx  PowerBI_FlareRisk.c  (+6 more)
(+474 files in other folders)
